--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,6 @@
 registry=https://registry.npmjs.org/
 @rms-apps:registry=https://npm.pkg.github.com/
-//npm.pkg.github.com/:_authToken=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
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
 
 # pnpm
 strict-peer-dependencies=false
