--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-APP_NAME=Quotify
+APP_NAME=Quotify - Daily Motivation
 APP_SLUG=quotify
 ANDROID_PACKAGE=com.rmapps.quotify
 IOS_BUNDLE_ID=com.rmapps.quotify
-DESCRIPTION=Quotify is an app that provides daily inspirational quotes to uplift your mood and motivate you throughout the day.
+DESCRIPTION=Daily motivation, positive quotes and affirmations to stay inspired, productive and focused every day.
 ANDROID_APP_ID='ca-app-pub-7132718007829523~2794500862'
 IOS_APP_ID=ca-app-pub-xxxxxxxxxxxxxxxx~zzzzzzzzzz
 EAS_PROJECT_ID='01f1faf8-bae0-47ac-96f3-4828fee2adcc'
-GITHUB_TOKEN=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
+GITHUB_TOKEN={YOUR_GITHUB_TOKEN_HERE}
